# python-aem-packages-automation

./: .env.example  README.md  main.py  pyproject.toml
helpers/: aem.py  package_names_and_filters.py
